add some basic css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h3>My first web</h3>
+   <div class="food-container">
+    <h3 class="food-title"> My favourite foods </h3>
+    <Ul class="list-style">
+        <li>Bargar</li>
+        <li>Vat</li>
+        <li>Dal</li>
+        <li>Dim</li>
+        <li>Fish</li>
+    </Ul>
+   </div>
+   <div class="fruits-container">
+    <h3 id="fruits-title">My favourite fruits</h3>
+    <ul class="list-style">
+        <li>Mango</li>
+        <li>Banana</li>
+        <li>Apple</li>
+        <li>Orange</li>
+        <li>Jam</li>
+    </ul>
+   </div>
+    <div class="places-container">
+        <h3 id="places-title">My favourite places</h3>
+    <ul class="list-style">
+        <li>Gaibandha</li>
+        <li>Dhaka</li>
+        <li>Mymensing</li>
+        <li>Rangpur</li>
+        <li>Bogura</li>
+    </ul>
+    </div>
 </body>
 </html>
